<resources>
    <string name="app_name">Koltaun</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_vocabulario">Vocabulario</string>
    <string name="title_cuentos">Cuentos</string>
    <string name="tltle_aprender">Aprender</string>
    <string name="title_practicar">Practicar</string>
    <string name="title_informacion">Información</string>

    <string name="descripcion_colores">Colores en español y tzotzil</string>
    <string name="descripcion_alimentos">Frutas y verduras en español y tzotzil.</string>
    <string name="descripcion_animales">Especies de animales en español y tzotzil.</string>
    <string name="descripcion_cuertpo">Partes del cuerpo en español y tzotzil.</string>
    <string name="descripcion_parentezco">Familiares en español y tzotzil.</string>
    <string name="descripcion_tiempo">Tiempo en español y tzotzil.</string>
    <string name="descripcion_numeros">Números en español y tzotzil.</string>
    <string name="descripcion_verbos">Verbos en español y tzotzil.</string>
    <string name="descripcion_saludos">Saludos y frases en español y tzotzil.</string>

    <string name="nombrescreadores">Moltalvo Pérez Miriam Lucía\nPérez Barrios Kevin Daniel\nRodríguez Rodríguez Raúl Alejandro\nWitrón López Diego Alonso</string>
    <string name="lblColaboradores">Colaboradores</string>
    <string name="lblCreadores">Creadores</string>
    <string name="lblFacebookTourGame">/TourGame</string>
    <string name="lblAvisoPrivacidad">Aviso de privacidad</string>
    <string name="lblDerechosReservados">Koltaun\n©2023 Tour Game. Todos los derechos reservados</string>
    <string name="correoMirai">miraimx742414@gmail.com</string>
    <string name="version">Versión 1.0.0</string>
    <string name="titleAcercaDe">Acerca De</string>
    <string name="nombrescolaboradores">MiraiMX\nEtc</string>
    <string name="descripcionLogoTourGame">Logo de la empresa Tour Game</string>
    <string name="nombreKevin">Kevin Barrios</string>
    <string name="nombreMiriam">Miriam Montalvo</string>
    <string name="nombreDiego">Diego Witrón</string>
    <string name="nombreRaul">Raúl Rodríguez</string>
    <string name="lblAsesores">Asesores</string>
    <string name="nombreMadain">Madain Pérez</string>
    <string name="nombreNestor">Néstor Morales</string>
    <string name="nombreRuth">Ruth Roblero</string>
    <string name="lblVoz">Voz en tzotzil</string>
    <string name="lblDisenador">Diseñador</string>
    <string name="nombreAndrea">Andrea Díaz</string>
    <string name="nombreAlan">Alan Witrón</string>
    <string name="lblRegistrarNuevoUsuario">Registrar nuevo usuario</string>
    <string name="lblCorreo">Correo electrónico:</string>
    <string name="lblNuevaContra">Nueva contraseña:</string>
    <string name="lblConfirmaContra">Confirma tu contraseña:</string>
    <string name="lblRegistrarse">Registrarse</string>
    <string name="hintContrasena">Contraseña</string>
    <string name="hintCorreo">Correo</string>
    <string name="lblIniciarSesion">Iniciar sesión</string>
    <string name="lblRegistrate">¿No tienes cuenta? Regístrate</string>
    <string name="confirmacionTerminos">Confirmo que he leído y estoy de acuerdo con los términos y condiciones y la política de privacidad</string>

    <string-array name="lista_palabras">
        <item>hola|hun</item>
        <item>casa|bak\'</item>
        <item>perro|pooch\'</item>
        <item>gato|sak</item>
        <item>amarillo|shulub</item>
        <item>manzana|yaxcol</item>
        <item>montaña|ch\'ulel</item>
        <item>sol|k\'inal</item>
        <item>luna|p\'uuy</item>
        <item>estrella|tz\'iibil</item>
        <item>fuego|k\'áax</item>
        <item>agua|ya\'</item>
        <item>aire|sotz\'il</item>
        <item>tierra|lum</item>
        <item>árbol|che\'</item>
        <item>flor|xanlol</item>
        <item>río|yaxub</item>
        <item>mar|k\'áak\'</item>
        <item>viento|uts</item>
        <item>nube|k\'op\'o\'</item>
        <item>rayo|tz\'iibi\'</item>
        <item>trueno|k\'\'aay</item>
        <item>nieve|uts\'ibal</item>
        <item>lluvia|k\'aay</item>
        <item>frio|yáax</item>
        <item>calor|ch\'iik</item>
        <item>alegre|k\'amul</item>
        <item>triste|ch\'ulub</item>
        <item>enojado|tz\'ikin</item>
        <item>miedo|ts\'ikin</item>
        <item>amor|sasil</item>
        <item>odio|t\'uxul</item>
        <item>comer|tsik</item>
        <item>beber|tso\'</item>
        <item>dormir|velel</item>
        <item>caminar|ju\'um</item>
        <item>correr|ts\'o\'k</item>
        <item>saltar|ts\'íb</item>
        <item>reír|kuxan</item>
        <item>llorar|ya\'ok</item>
        <item>hablar|kolik</item>
        <item>escuchar|yok\'ol</item>
        <item>ver|wach</item>
        <item>sentir|t\'enel</item>
        <item>pensar|ts\'íibil</item>
        <item>soñar|ch\'íich\'</item>
        <item>aprender|tzelel</item>
        <item>conocer|buxi\'</item>
        <item>querer|vinik</item>
        <item>crear|ko\'olel</item>
        <item>buscar|y\'iit</item>
        <item>encontrar|bajk</item>
        <item>dar|kuxtal</item>
        <item>recibir|kuxtalil</item>
        <item>trabajar|u\'uk</item>
        <item>descansar|yichk\'in</item>
        <item>ganar|ts\'iikbal</item>
        <item>perder|ts\'áam</item>
        <item>abrir|chikin</item>
        <item>cerrar|ts\'ikbal</item>
        <item>entrar|yich\'</item>
        <item>salir|tsikbal</item>
        <!-- Agregar más palabras-->
    </string-array>

    <string-array name="coloresLista">
        <item>amarillo</item>
        <item>azul</item>
        <item>blanco</item>
        <item>cafe</item>
        <item>celeste</item>
        <item>gris</item>
        <item>guinda</item>
        <item>lila</item>
        <item>morado</item>
        <item>naranja</item>
        <item>negro</item>
        <item>rojo</item>
        <item>rosa</item>
        <item>verde</item>
    </string-array>

    <string-array name="alimentosLista">
        <item>aguacate</item>
        <item>ajo</item>
        <item>banana</item>
        <item>calabaza</item>
        <item>cebolla</item>
        <item>champinon</item>
        <item>chayote</item>
        <item>chicozapote</item>
        <item>chile</item>
        <item>chirimoya</item>
        <item>durazno</item>
        <item>frijol</item>
        <item>guayaba</item>
        <item>guineo</item>
        <item>hiervasanta</item>
        <item>lechuga</item>
        <item>limon</item>
        <item>maiz</item>
        <item>mandarina</item>
        <item>manzana</item>
        <item>milpa</item>
        <item>mora</item>
        <item>nopal</item>
        <item>papa</item>
        <item>papaya</item>
        <item>pinia</item>
        <item>tomate</item>
    </string-array>

    <string-array name="animalesLista">
        <item>abeja</item>
        <item>acaro</item>
        <item>alacran</item>
        <item>arana</item>
        <item>ardilla</item>
        <item>armadillo</item>
        <item>caballo</item>
        <item>mariposa</item>
        <item>mosca</item>
        <item>perro</item>
    </string-array>

    <string-array name="numeroLista">
        <item>uno</item>
        <item>dos</item>
        <item>tres</item>
        <item>cuatro</item>
        <item>cinco</item>
        <item>seis</item>
        <item>siete</item>
        <item>ocho</item>
        <item>nueve</item>
        <item>diez</item>
    </string-array>

    <string-array name="cuerpoLista">
        <item>abdomen</item>
        <item>boca</item>
        <item>brazo</item>
        <item>cuello</item>
        <item>garganta</item>
        <item>mano</item>
    </string-array>

    <string-array name="familiaLista">
        <item>abuela</item>
        <item>abuelo</item>
        <item>madre</item>
        <item>padre</item>
        <item>ahijado</item>
    </string-array>
</resources>