<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleAcercaDe"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logotourgame"
            android:scaleType="fitCenter"
            android:contentDescription="Logo de la empresa"
            android:background="@color/white"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="15dp" />
        </LinearLayout>
    </LinearLayout>


    <!-- ... Otros elementos ... -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contacto"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:layout_margin="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/correo"
            android:layout_marginStart="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correoMirai"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:textColor="@color/textColor"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        >
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/facebook"
            android:layout_marginStart="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblTourGame"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:textColor="@color/textColor"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblCreadores"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombrescreadores"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblColaboradores"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombrescolaboradores"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>
    <TextView
        android:id="@+id/txtAvisoPrivacidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblAvisoPrivacidad"
        android:textColor="@color/hipervinculos"
        android:textSize="25sp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblDerechosReservados"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        android:gravity="bottom"
        android:paddingBottom="10dp" />
    </LinearLayout>

</ScrollView>
