<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblIniciarSesion"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/editCorreo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="96dp"
        android:hint="@string/hintCorreo"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:layout_margin="20dp"
        />

    <EditText
        android:id="@+id/editContrasena"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hintContrasena"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:layout_margin="20dp"
        />

    <TextView
        android:id="@+id/txtCorreoValido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/rojo"
        android:textSize="15sp"
        android:layout_gravity="center"
        />



    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:layout_margin="20dp"
        android:text="@string/lblIniciarSesion"
        android:background="@drawable/boton_login"
        />

    <TextView
        android:id="@+id/textRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/hipervinculos"
        android:text="@string/lblRegistrate"
        android:layout_gravity="center"
        android:textSize="20sp"/>


</LinearLayout>