<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_diccionario"
    tools:context=".Aprender">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <!--Botones largos para seleccionar la activity-->
            <LinearLayout
                android:id="@+id/btnColores"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/redondeado_aprender"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/paleta" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Colores"
                        style="@style/titulos_aprender"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/descripcion_colores"
                        style="@style/descripciones_aprender"
                        />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="@android:color/darker_gray" />


            <LinearLayout
                android:id="@+id/btnAlimentos"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/redondeado_aprender"
                android:paddingHorizontal="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/alimentos" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Alimentos"
                        style="@style/titulos_aprender" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/descripcion_alimentos"
                        style="@style/descripciones_aprender"
                        />
                </LinearLayout>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/btnAnimales"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/redondeado_aprender"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/huella" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Animales"
                        style="@style/titulos_aprender" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/textColor"
                        android:text="@string/descripcion_animales"
                        style="@style/descripciones_aprender"
                        />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/btnNumeros"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/redondeado_aprender"
                android:paddingHorizontal="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/numeros" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Números"
                        style="@style/titulos_aprender"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/descripcion_numeros"
                        style="@style/descripciones_aprender"
                        />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/btnCuerpo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/redondeado_aprender"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/partescuerpo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Partes del cuerpo"
                        style="@style/titulos_aprender" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/descripcion_cuertpo"
                        style="@style/descripciones_aprender"
                        />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/btnParentezcos"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/redondeado_aprender"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/familia" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Parentescos"
                        style="@style/titulos_aprender"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/descripcion_parentezco"
                        style="@style/descripciones_aprender"
                        />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="@android:color/darker_gray" />

            <!--
            <LinearLayout
                android:id="@+id/btnTiempo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/redondeado_aprender"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/tiempo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tiempo"
                        style="@style/titulos_aprender"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/descripcion_tiempo"
                        style="@style/descripciones_aprender"
                        />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/btnVerbos"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/redondeado_aprender"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/correr" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Verbos"
                        style="@style/titulos_aprender"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/descripcion_verbos"
                        style="@style/descripciones_aprender"
                        />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/btnSaludos"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/redondeado_aprender"
                android:paddingHorizontal="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/saludos" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Saludos"
                        style="@style/titulos_aprender" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/descripcion_saludos"
                        style="@style/descripciones_aprender"
                        />
                </LinearLayout>
            </LinearLayout>

            -->
            <!--Aquí termina el layout principal que
            contiene la lista de botones-->
        </LinearLayout>
    </ScrollView>

</FrameLayout>